# medqa-thesis-app

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
deployment/: Dockerfile  docker-compose.yml
docs/: 01-overview.md  02-plan.md  03-architecture.md  04-folder-structure.md  05-features.md  06-data-and-schemas.md  07-rag-architectures.md  08-evaluation.md  09-explainability.md  10-api-reference.md  11-configuration.md  12-observability.md  13-testing.md  14-setup-and-run.md  15-deployment.md  16-methodology-mapping.md  17-roadmap.md  README.md
docs/architecture/adr/: 0001-llm-provider-groq.md  0002-vector-db-faiss-bm25.md  0003-per-rag-folder-isolation.md  0004-single-yaml-config.md
docs/my-notes/: steps-follow
scripts/: build_index.py  evaluate_results.py  generate_thesis_tables.py  run_all_experiments.py  run_one_rag.py
src/medqa_rag/: __init__.py
src/medqa_rag/api/: dependencies.py  lifespan.py  main.py
src/medqa_rag/api/docs/: __init__.py  openapi_tags.py
src/medqa_rag/api/middleware/: __init__.py  error_handler.py  logging.py
src/medqa_rag/api/routers/: __init__.py  evaluation.py  explainability.py  health.py  qa.py
src/medqa_rag/api/schemas/: __init__.py  errors.py  request.py  response.py
src/medqa_rag/core/: __init__.py  config.py  constants.py  exceptions.py  types.py
src/medqa_rag/data/: __init__.py
src/medqa_rag/data/chunking/: __init__.py  base.py  factory.py  recursive.py
src/medqa_rag/data/loaders/: __init__.py  medqa_loader.py  textbook_loader.py
src/medqa_rag/data/preprocessing/: __init__.py  cleaners.py  normalizers.py  validators.py
src/medqa_rag/embeddings/: __init__.py  base.py  cache.py  factory.py  huggingface_embedder.py
src/medqa_rag/evaluation/: __init__.py  hallucination_detector.py  non_llm_metrics.py  ragas_evaluator.py  statistical_tests.py
src/medqa_rag/evaluation/reporters/: __init__.py  latex_reporter.py  markdown_reporter.py
src/medqa_rag/explainability/: __init__.py  base.py  lime_explainer.py  sampler.py  shap_explainer.py
src/medqa_rag/llm/: __init__.py  cache.py  groq_client.py  rate_limiter.py
src/medqa_rag/observability/: __init__.py  logger.py  mlflow_tracker.py
src/medqa_rag/pipelines/: comparison_pipeline.py  evaluation_pipeline.py  ingestion_pipeline.py
src/medqa_rag/rags/: __init__.py  base.py  factory.py
src/medqa_rag/rags/hybrid_rag/: README.md  __init__.py  config.py  fusion.py  generator.py  pipeline.py  retriever.py
src/medqa_rag/rags/hybrid_rag/prompts/: hybrid_qa.jinja2
src/medqa_rag/rags/hybrid_rag/tests/: test_fusion.py
src/medqa_rag/rags/multihop_rag/: README.md  __init__.py  chain_aggregator.py  config.py  decomposer.py  generator.py  iterative_retriever.py  pipeline.py
src/medqa_rag/rags/naive_rag/: README.md  __init__.py  config.py  generator.py  pipeline.py  retriever.py
src/medqa_rag/rags/naive_rag/tests/: test_pipeline.py
src/medqa_rag/rags/self_rag/: README.md  __init__.py  confidence_gate.py  config.py  generator.py  pipeline.py  retriever.py
src/medqa_rag/retrieval/: __init__.py  base.py  dense_faiss.py  sparse_bm25.py
src/medqa_rag/utils/: __init__.py  async_utils.py  io.py  seeds.py  timing.py
tests/: conftest.py
tests/e2e/: test_full_comparison.py
tests/fixtures/: sample_questions.jsonl
tests/integration/: test_api_endpoints.py
tests/unit/: test_chunking.py  test_config.py  test_hallucination_detector.py  test_medqa_loader.py  test_sampler.py  test_statistical_tests.py
(+7 files in other folders)
