[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medqa-rag"
version = "0.1.0"
description = "Systematic comparison of four RAG architectures for evidence-based medical QA on MedQA USMLE."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Raja Kalavala" }]
license = { text = "MIT" }
keywords = ["rag", "medical", "llm", "groq", "ragas", "medqa"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "rich>=13.7",
    "tenacity>=8.2",

    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",

    # LLM
    "groq>=0.11",

    # Embeddings + retrieval
    "sentence-transformers>=2.7",
    "transformers>=4.40",
    "torch>=2.2",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2.2",
    "numpy>=1.26",

    # LangChain (for prompts/chains in multihop only)
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "jinja2>=3.1",

    # Evaluation
    "ragas>=0.2",
    "datasets>=2.18",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",

    # Explainability
    "lime>=0.2.0.1",
    "shap>=0.45",

    # Tracking
    "mlflow>=2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML",
    "ipykernel>=6.29",
]

[project.scripts]
medqa-build-index = "medqa_rag.pipelines.ingestion_pipeline:main"
medqa-run = "scripts.run_one_rag:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"medqa_rag" = ["**/*.jinja2", "**/*.yaml"]

# ---------------- ruff ----------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",
]
ignore = ["E501"]  # handled by formatter

# ---------------- black ----------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------- mypy ----------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
warn_return_any = false
exclude = ["build/", "dist/", "notebooks/"]

# ---------------- pytest ----------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=src/medqa_rag --cov-report=term-missing --cov-report=xml"
testpaths = ["tests", "src/medqa_rag/rags"]
python_files = ["test_*.py"]
markers = [
    "unit: fast unit tests",
    "integration: integration tests (mocked external services)",
    "e2e: end-to-end tests (real Groq calls)",
    "slow: slow tests (>5s)",
]
asyncio_mode = "auto"

# ---------------- coverage ----------------
[tool.coverage.run]
branch = true
source = ["src/medqa_rag"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
